Bug 377298 - plasma5 crash after detaching secondary screen
Summary: plasma5 crash after detaching secondary screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.8.3
Platform: openSUSE Linux
: NOR crash
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: drkonqi
: 378151 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-03-06 17:17 UTC by edgardo arrieta
Modified: 2017-04-11 13:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description edgardo arrieta 2017-03-06 17:17:53 UTC
Application: plasmashell (5.8.3)

Qt Version: 5.6.1
Frameworks Version: 5.26.0
Operating System: Linux 4.4.49-16-default x86_64
Distribution: "openSUSE Leap 42.2"

-- Information about the crash:
I use the laptop for class presentation. After detaching the videoBeam there was the crash.
- What I was doing when the application crashed:

-- Backtrace:
Application: Plasma (plasmashell), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f526af95900 (LWP 2007))]

Thread 18 (Thread 0x7f5185af4700 (LWP 8435)):
#0  0x00007f52646bc49d in poll () at /lib64/libc.so.6
#1  0x00007f525a3400a1 in  () at /usr/lib64/libpulse.so.0
#2  0x00007f525a33176c in pa_mainloop_poll () at /usr/lib64/libpulse.so.0
#3  0x00007f525a331dde in pa_mainloop_iterate () at /usr/lib64/libpulse.so.0
#4  0x00007f525a331e90 in pa_mainloop_run () at /usr/lib64/libpulse.so.0
#5  0x00007f525a340006 in  () at /usr/lib64/libpulse.so.0
#6  0x00007f5259cd7408 in  () at /usr/lib64/pulseaudio/libpulsecommon-9.0.so
#7  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#8  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 17 (Thread 0x7f5186df5700 (LWP 8434)):
#0  0x00007f52646bc49d in poll () at /lib64/libc.so.6
#1  0x00007f5260d84314 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f52680be9c8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 16 (Thread 0x7f51877fe700 (LWP 3615)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#9  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#10 0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#11 0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#12 0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#13 0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#14 0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#15 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#16 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 15 (Thread 0x7f518c839700 (LWP 3614)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 14 (Thread 0x7f518d03a700 (LWP 3613)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#9  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#10 0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#11 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#12 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 13 (Thread 0x7f518d83b700 (LWP 3612)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 12 (Thread 0x7f518e03c700 (LWP 3611)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#9  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#10 0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#11 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#12 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 11 (Thread 0x7f5187fff700 (LWP 3610)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#9  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#10 0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#11 0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#12 0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#13 0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#14 0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#15 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#16 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 10 (Thread 0x7f518e83d700 (LWP 3609)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#9  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 9 (Thread 0x7f51959d5700 (LWP 3608)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f5264db765b in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib64/libQt5Core.so.5
#2  0x00007f51b0a8b42f in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#3  0x00007f51b0a8edea in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#4  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#5  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#6  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#7  0x00007f51b0a8ee32 in  () at /usr/lib64/libKF5ThreadWeaver.so.5
#8  0x00007f51b0a8945b in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib64/libKF5ThreadWeaver.so.5
#9  0x00007f51b0a8ca46 in ThreadWeaver::Thread::run() () at /usr/lib64/libKF5ThreadWeaver.so.5
#10 0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#11 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#12 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 8 (Thread 0x7f51a8719700 (LWP 2129)):
#0  0x00007f5263ecaee1 in pthread_getspecific () at /lib64/libpthread.so.0
#1  0x00007f5260da8e40 in g_thread_self () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d8441d in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f51a9b418f7 in KCupsConnection::run() () at /usr/lib64/libkcupslib.so
#7  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 7 (Thread 0x7f51b3acf700 (LWP 2119)):
#0  0x00007f52646b851d in read () at /lib64/libc.so.6
#1  0x00007f5260dc4670 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d83e49 in g_main_context_check () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5260d842a8 in  () at /usr/lib64/libglib-2.0.so.0
#4  0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#5  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#7  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5268c41632 in  () at /usr/lib64/libQt5Quick.so.5
#9  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#10 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#11 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 6 (Thread 0x7f5241b98700 (LWP 2118)):
#0  0x00007f5263eca0af in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f526a67a93b in  () at /usr/lib64/libQt5Script.so.5
#2  0x00007f526a67a969 in  () at /usr/lib64/libQt5Script.so.5
#3  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7f52435ef700 (LWP 2117)):
#0  0x00007f52646bc49d in poll () at /lib64/libc.so.6
#1  0x00007f5260d84314 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f52680be9c8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f5251e43700 (LWP 2112)):
#0  0x00007f52646bc49d in poll () at /lib64/libc.so.6
#1  0x00007f5260d84314 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#4  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#5  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#6  0x00007f52680be9c8 in  () at /usr/lib64/libQt5Qml.so.5
#7  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f5252ea8700 (LWP 2069)):
#0  0x00007f52646b851d in read () at /lib64/libc.so.6
#1  0x00007f5260dc4670 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f5260d83e49 in g_main_context_check () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f5260d842a8 in  () at /usr/lib64/libglib-2.0.so.0
#4  0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#5  0x00007f5264fc932b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#6  0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#7  0x00007f5264db1f1a in QThread::exec() () at /usr/lib64/libQt5Core.so.5
#8  0x00007f5265b321d5 in  () at /usr/lib64/libQt5DBus.so.5
#9  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#10 0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#11 0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f5254494700 (LWP 2013)):
#0  0x00007f52646bc49d in poll () at /lib64/libc.so.6
#1  0x00007f52695f53e2 in  () at /usr/lib64/libxcb.so.1
#2  0x00007f52695f6fcf in xcb_wait_for_event () at /usr/lib64/libxcb.so.1
#3  0x00007f52567ea839 in  () at /usr/lib64/libQt5XcbQpa.so.5
#4  0x00007f5264db69e9 in  () at /usr/lib64/libQt5Core.so.5
#5  0x00007f5263ec5734 in start_thread () at /lib64/libpthread.so.0
#6  0x00007f52646c4d3d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f526af95900 (LWP 2007)):
[KCrash Handler]
#6  0x00007f526a9b20c4 in PlasmaQuick::ContainmentView::containment() const () at /usr/lib64/libKF5PlasmaQuick.so.5
#7  0x000000000043d89e in ShellCorona::screenForContainment(Plasma::Containment const*) const (this=0x21bb5c0, containment=0x23bfdb0) at /usr/src/debug/plasma-workspace-5.8.3/shell/shellcorona.cpp:1802
#8  0x000000000043d7ef in ShellCorona::screenForContainment(Plasma::Containment const*) const (this=0x21bb5c0, containment=0x256ed60) at /usr/src/debug/plasma-workspace-5.8.3/shell/shellcorona.cpp:1794
#9  0x00007f51a77647ae in NotificationsApplet::onScreenChanges() (this=0x4a4dc20) at /usr/src/debug/plasma-workspace-5.8.3/applets/notifications/lib/notificationsapplet.cpp:65
#10 0x00007f5264fa31c3 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib64/libQt5Core.so.5
#11 0x00007f5252264434 in  () at /usr/lib64/qt5/plugins/kf5/org.kde.kwindowsystem.platforms/KF5WindowSystemX11Plugin.so
#12 0x00007f5264f76270 in QAbstractEventDispatcher::filterNativeEvent(QByteArray const&, void*, long*) () at /usr/lib64/libQt5Core.so.5
#13 0x00007f52567e8be4 in QXcbConnection::handleXcbEvent(xcb_generic_event_t*) () at /usr/lib64/libQt5XcbQpa.so.5
#14 0x00007f52567eac3b in QXcbConnection::processXcbEvents() () at /usr/lib64/libQt5XcbQpa.so.5
#15 0x00007f5264fa4166 in QObject::event(QEvent*) () at /usr/lib64/libQt5Core.so.5
#16 0x00007f5265f00e3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#17 0x00007f5265f0549a in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQt5Widgets.so.5
#18 0x00007f5264f78fc5 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib64/libQt5Core.so.5
#19 0x00007f5264f7adaa in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQt5Core.so.5
#20 0x00007f5264fc9c83 in  () at /usr/lib64/libQt5Core.so.5
#21 0x00007f5260d84134 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#22 0x00007f5260d84388 in  () at /usr/lib64/libglib-2.0.so.0
#23 0x00007f5260d8442c in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#24 0x00007f5264fc930c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#25 0x00007f5264f76fdb in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQt5Core.so.5
#26 0x00007f5264f7eec6 in QCoreApplication::exec() () at /usr/lib64/libQt5Core.so.5
#27 0x000000000041eacf in main(int, char**) (argc=2, argv=<optimized out>) at /usr/src/debug/plasma-workspace-5.8.3/shell/main.cpp:166

Possible duplicates by query: bug 376019, bug 374759, bug 374479, bug 373998, bug 373373.

Reported using DrKonqi
Comment 1 Marco Martin 2017-03-09 16:42:38 UTC
line numbers don't seem to correspond exactly with the 5.8.3 tag, btw, the crash is probably at line 1792 if (m_desktopViewforId.value(id)->containment() == containment && containment->activity() == m_activityController->currentActivity()) {

like screenForContainment was called before the deleted desktopview was removed fro mthe pool
Comment 2 Marco Martin 2017-03-09 17:00:00 UTC
in the notifications applet, 
connect(KWindowSystem::self(), &KWindowSystem::workAreaChanged,
            this, &NotificationsApplet::onScreenChanges);

seems to trigger onScreenChanges, then containment()->corona()->availableScreenRect(containment()->screen()); in the middle of the way between view deletion and removal from the list
Comment 3 Marco Martin 2017-03-09 17:40:28 UTC
possible solution: https://phabricator.kde.org/D4991
Comment 4 Marco Martin 2017-03-10 11:16:48 UTC
Git commit bcb6b86d3ab8bd196877473af343b72c53e4f932 by Marco Martin.
Committed on 10/03/2017 at 11:16.
Pushed by mart into branch 'Plasma/5.8'.

try proper order of corona()->availableScreenRect()

Summary:
connect to Plasma::Corona::availableScreenRectChanged
instead of using kscreen, this way we should be more sure
that signal is emitted when it's safe to call
corona()->availableScreenRect() as the change of rect
may happen after a screen removal, so may mean
accessing a desktop view while being deleted

Test Plan:
notifications still pop up in the proper place,
couldn't reproduce the crash neither before nor after tough

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4991

M  +3    -4    applets/notifications/lib/notificationsapplet.cpp
M  +1    -1    shell/shellcorona.cpp

https://commits.kde.org/plasma-workspace/bcb6b86d3ab8bd196877473af343b72c53e4f932
Comment 5 David Edmundson 2017-03-27 16:47:20 UTC
*** Bug 378151 has been marked as a duplicate of this bug. ***
Comment 6 Marco Martin 2017-04-11 13:51:56 UTC
*** Bug 378508 has been marked as a duplicate of this bug. ***